# supply-graph-ai

./: .cursor-rules  .cursorrules  .dockerignore  .env.federation.example  .env.local.example  .env.template  .gitignore  .pre-commit-config.yaml  .repo-map-aider.md  .repo-map-sourcegraph.md  .repo-map.md  CHANGELOG.md  CLAUDE.md  CLI_FIXES.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  MIGRATION_FINAL_SUMMARY.md  MIGRATION_PHASE1_RESULTS.md  MIGRATION_PHASE2_RESULTS.md  Makefile  PYTHON_312_CLOUD_RUN_DEPLOYMENT.md  PYTHON_312_INTEGRATION_TEST_RESULTS.md  PYTHON_312_MIGRATION_COMPLETE.md  README.md  README_TESTING.md  analysis.md  analyze_synthetic_data.py  bom-integration-plan.md  check_cloud_logs.sh  cloudbuild.yaml  demo_cli_review.py  docker-compose.federation.yml  docker-compose.llm.yml  docker-compose.yml  docker-entrypoint.sh  env.template  generate_test_okw.py  get_cloud_run_token.sh  get_token_user_account.sh  (+51 more)
.claude/: settings.json
azure-upload/: UPLOAD_INSTRUCTIONS.md
config/: integration_config.json  llm_config.json  llm_config.json.example  prometheus-cloud-run.yml  prometheus.yml
demo/: README.md  __init__.py  api_client.py  app.py  demo_script.md  facilities.py  facility_deduplication.py  matching.py  okh_designs.py  results_parser.py  rfq_generator.py  solution_selectors.py
demo_okw_eu_v2/: beaglebone-black-cnc-machining-1-okw.json  bha_bioreactor-assembly-1-okw.json  bha_centrifuge-laser-cutting-1-okw.json  bha_gelbox-laser-cutting-1-okw.json  bha_incubator-laser-cutting-1-okw.json  bha_microscope-laser-cutting-1-okw.json  bha_peristalticpump-laser-cutting-1-okw.json  bha_photobioreactor-step01-laser-cutting-1-okw.json  bha_photobioreactor-step02-assembly-2-okw.json  bha_spectrophotometer-step01-laser-cutting-1-okw.json  bha_spectrophotometer-step02-assembly-2-okw.json  bha_stirrer-laser-cutting-1-okw.json  bha_syringepump-laser-cutting-1-okw.json  bha_thermocycler-step01-laser-cutting-1-okw.json  bha_thermocycler-step02-assembly-2-okw.json  bha_webcam_microscope-step01-laser-cutting-1-okw.json  bha_webcam_microscope-step02-assembly-2-okw.json  biohackboard-step01-soldering-and-electronics-asse-okw.json  biohackboard-step02-assembly-2-okw.json  ch32fun-assembly-1-okw.json  efekta-eink213-air-quality-sensor-nrf528-3d-printing-1-okw.json  face-shield-step01-3d-printing-1-okw.json  face-shield-step02-laser-cutting-2-okw.json  face-shield-step03-assembly-3-okw.json  fanpico-programmable-pwm-pc-fan-controll-step01-3d-printing-1-okw.json  fanpico-programmable-pwm-pc-fan-controll-step02-assembly-2-okw.json  iris-case-3d-printing-1-okw.json  jpl-open-source-rover-project-step01-3d-printing-1-okw.json  jpl-open-source-rover-project-step02-laser-cutting-2-okw.json  jpl-open-source-rover-project-step03-cnc-machining-3-okw.json  jpl-open-source-rover-project-step04-soldering-and-electronics-asse-okw.json  jpl-open-source-rover-project-step05-assembly-5-okw.json  jpl-open-source-rover-project-step06-drilling-and-machining-6-okw.json  microlab-step01-3d-printing-1-okw.json  microlab-step02-soldering-and-electronics-asse-okw.json  microlab-step03-assembly-3-okw.json  mouse-step01-soldering-and-electronics-asse-okw.json  mouse-step02-assembly-2-okw.json  openflexure-microscope-step01-3d-printing-1-okw.json  openflexure-microscope-step02-assembly-2-okw.json  (+11 more)
deploy/: __init__.py
docs/: RELEASE.md  architecture.md  cheatsheet.md  data-flow-diagram.md  data-flow-diagram.mermaid  extraction-layer.md  index.md  llm-service.md  matching-engine-documentation.md  migration-guide.md  overview.md  system-diagram.md  system-diagram.mermaid  system-docs.md
examples/: direct_matching_example.py
frontend/: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  eslint.config.js  harness.config.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
harness/: README.md  __init__.py  base.py  config.py  protocol.py  runner.py
notes/: DEMO_GUIDE.md  OME - developer-docs 01-29-25.md  OME - developer-docs [01:29:25].md  OpenKnowWhere.md  api-extension-plan.md  chair-supply-tree-sketch.md  graph-structure.md  notes.md  ome-design-doc.md  standards-integration.md  steel-knife-supply-tree.md  storage-roadmap.md  storage_config_integration.md  supply-tree-requirements.md  tree.md  validation-file-structure.md  validation-strategy.md  variant-requirement-trees.md
scripts/: .repo-map-aider.md  .repo-map-sourcegraph.md  README.md  audit_env_vars.py  audit_remote_okh_response_shape.py  auto_fix_newformats_kitchens.py  batch_build_push_okh_packages.py  bringup.sh  bump_version.py  check_spacy.py  clear_storage.py  compare_storage_containers.py  complete_deployment.sh  copy_container_blobs.py  create_github_issues.py  deploy_cloud_run.sh  diagnose_api_port.sh  diagnose_component_manifests.py  dump_api_routes.py  explore_remote_storage.py  extract_changelog_section.py  extract_package_from_container.sh  federation_e2e.sh  federation_matrix.sh  federation_regression.sh  federation_seed_azure.sh  generate_aider_map.py  generate_demo_okw_eu.py  generate_env_template.py  generate_openapi_routes_md.py  generate_repo_map.py  generate_scripts_index.py  generate_sourcegraph_map.py  generate_synthetic_data.py  generate_workflow_data.py  import_okh_losh_batch.py  matching_batch.py  okh_generation_azure_regen_batches.py  okh_generation_azure_regen_lib.py  okh_generation_azure_regen_replace.py  (+22 more)
src/: __init__.py
synth/: SYNTHETIC_DATA_GENERATOR.md  generate_synthetic_data.py  generate_workflow_data.py  output-1.json  test_cooking_matching.py  test_scenarios.py  upload_kitchen_files.py
synthetic-data/: arduino-based-iot-sensor-node-3-2-8-okh.json  arduino-based-iot-sensor-node-3-7-8-okh.json  cnc-machined-aluminum-bracket-1-0-9-okh.json  cnc-machined-aluminum-bracket-3-3-8-okh.json  cnc-machined-aluminum-bracket-3-9-8-okh.json  cnc-machined-aluminum-bracket-3-9-9-okh.json  electronics-assembly-house-003-okw.json  industrial-manufacturing-plant-001-okw.json  rapid-prototyping-lab-002-okw.json  sheet-metal-enclosure-2-9-9-okh.json
(+1848 files in other folders)
