[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supply-graph-ai"
version = "1.0.0"
description = "Open Hardware Manager (OHM) - A flexible, domain-agnostic framework for matching requirements with capabilities"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "OHM Team"}
]
keywords = ["open-hardware", "okh", "okw", "matching", "manufacturing", "supply-chain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Entry points for console scripts
[project.scripts]
ohm = "src.cli.main:cli"

# Optional: GUI scripts (if needed in future)
# [project.gui-scripts]
# ohm-gui = "src.cli.gui:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.setuptools]
# Package discovery
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "strict"
markers = [
    "e2e: end-to-end canonical workflow tests",
    "integration: integration tests that may require services or seeded data",
    "slow: tests that take more than 10 seconds",
    "llm: tests requiring LLM API access",
    "benchmark: performance benchmark tests",
    "okh_dataset: OKH generation dataset / clone manifest regression (tests/data/okh_generation)",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
  "build",
  "dist",
  ".venv",
]

[tool.ruff.lint]
# Keep CI focused on high-signal correctness and import hygiene.
select = ["E9", "F63", "F7", "F82"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
